# MonoGS

./: test.py
MonoGS/: environment.yml  slam.py
MonoGS/configs/mono/kitti/: base_config.yaml  odom_04.yaml
MonoGS/configs/stereo/kitti/: base_config.yaml  odom_04.yaml
MonoGS/gaussian_splatting/gaussian_renderer/: __init__.py
MonoGS/gaussian_splatting/scene/: gaussian_model.py
MonoGS/submodules/diff-gaussian-rasterization/: rasterize_points.cu  rasterize_points.h
MonoGS/submodules/diff-gaussian-rasterization/cuda_rasterizer/: auxiliary.h  forward.h  rasterizer.h  rasterizer_impl.cu  rasterizer_impl.h
MonoGS/utils/: pso.py  slam_frontend.py
configs/stereo/euroc/: base_config.yaml
configs/stereo/kitti/: odom_00.yaml
gs-slam/: CMakeLists.txt  readme.md
gs-slam/Examples/: Tum.cpp  Tum.hpp  rgbd_tum.cpp
gs-slam/config/: Tum.yaml
gs-slam/diff-gaussian-rasterization-w-depth/: rasterize_points.cu  rasterize_points.h
gs-slam/diff-gaussian-rasterization-w-depth/cuda_rasterizer/: auxiliary.h  backward.cu  backward.h  forward.cu  forward.h  rasterizer.h  rasterizer_impl.cu
gs-slam/diff-gaussian-rasterization-w-depth/diff_gaussian_rasterization/: __init__.py
gs-slam/include/: Dataset.hpp
gs-slam/src/: Dataset.cpp
submodules/diff-gaussian-rasterization/: CMakeLists.txt  ext.cpp
submodules/diff-gaussian-rasterization/cuda_rasterizer/: forward.cu
submodules/diff-gaussian-rasterization/diff_gaussian_rasterization/: __init__.py
utils/: dataset.py  pose_utils.py  slam_backend.py
